--- a/LibraryApp/src/main/webapp/WEB-INF/web.xml
+++ b/LibraryApp/src/main/webapp/WEB-INF/web.xml
@@ -4,9 +4,9 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
-<!--
+
   <!-- This is coding by configuration meaning I get source code from a different source and it dictates how my code is run -->
-  <servlet>
+<!--  <servlet>
     <servlet-name>Hello</servlet-name>
     <servlet-class>HelloServlet</servlet-class>
   </servlet>
@@ -14,8 +14,8 @@
   <servlet-mapping>
     <servlet-name>Hello</servlet-name>
     <url-pattern>JohnyBravo</url-pattern>
-  </servlet-mapping>
+  </servlet-mapping>                          -->
 
--->
+
 
 </web-app>
